fix(cors/security): libera OPTIONS, desabilita CSRF e permite /api/auth/**