@@ -9,38 +9,24 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Configuração de CORS para expor a API ao frontend.
- * As origens permitidas vêm de APP_CORS_ALLOWED_ORIGINS (CSV),
- * com fallback definido em application.yml (dev).
- */
 @Configuration
 public class CorsConfig {
 
     @Value("${app.cors.allowed-origins:*}")
-    private String allowedOriginsCsv;
+    private List<String> allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cors = new CorsConfiguration();
-
-        // aceita CSV: "http://localhost:5173,https://meu-front.com"
-        List<String> origins = Arrays.stream(allowedOriginsCsv.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isBlank())
-                .collect(Collectors.toList());
-
-        // Usar patterns permite curingas, caso necessário.
-        cors.setAllowedOriginPatterns(origins.isEmpty() ? List.of("*") : origins);
-        cors.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        cors.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With"));
-        cors.setExposedHeaders(List.of("Authorization", "Content-Disposition"));
-        cors.setAllowCredentials(false);
+        CorsConfiguration cfg = new CorsConfiguration();
+        cfg.setAllowedOrigins(allowedOrigins);
+        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
+        cfg.setAllowedHeaders(Arrays.asList("*"));
+        cfg.setExposedHeaders(Arrays.asList("Authorization","Content-Type"));
+        cfg.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cors);
+        source.registerCorsConfiguration("/**", cfg);
         return source;
     }
 }
